# tx3-mcp

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  env_vars.tx3  input_datum.tx3  lang_tour.tx3  oracle_reference_datum.tx3  reference_script.tx3  vesting.tx3  withdrawal.tx3
src/: args.rs  diagnostics.rs  main.rs  server.rs  tii_emit.rs
src/tools/: apply_args.rs  check.rs  examples.rs  inspect_project.rs  invoke.rs  lower.rs  mod.rs  parse.rs
tests/: smoke.rs
